--- a/public/index.html
+++ b/public/index.html
@@ -265,7 +265,7 @@
                         <div class="contacts-img xxs:block sm:block md:block lg:block customlg:hidden">
                             <img src="images/contacts-img.png" alt="contacts-img">
                         </div>
-                        <div class="contact-cards mt-[50px] flex flex-wrap justify-center customlg:justify-normal gap-[25px]">
+                        <div class="contact-cards mt-[50px] flex flex-wrap justify-center customlg:justify-normal gap-[25px] hiddenYEl">
                             <a href="https://www.instagram.com/joinway.24?igsh=eGM0d2Q3ZTR6c29k" class="contact-card">
                                 <i class="fa-brands fa-instagram"></i>
                                 <h3>@joinway.24</h3>
