--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join-Way Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
-    <link rel="manifest" href="/icons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+    <link rel="manifest" href="icons/site.webmanifest">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body class="bg-white dark:bg-gray-900">
@@ -79,7 +79,7 @@
                 <div class="about-main flex">
                     <div class="about-descr md:w-[100%] lg:w-[100%] customlg:w-[50%]">
                         <h1 class="xs:text-[25.34px] sm:text-[28.34px] md:text-[35.34px] lg:text-[42.34px] font-bold text-j-yellow hiddenYEl">Немного о нашей команде</h1>
-                        <div class="about-img sm:block md:block lg:block customlg:hidden">
+                        <div class="about-img sm:block md:block lg:block customlg:hidden hiddenYEl">
                             <img src="images/about-img.png" alt="about-img">
                         </div>
                         <div class="paragraphs mt-[27px] text-[16px] text-white gap-[37px]">
@@ -88,7 +88,7 @@
                             <p class="mb-[27px] hiddenYEl">С годами мы накопили значительный опыт в индустрии, который позволяет нам решать самые сложные задачи и создавать продукты, полностью соответствующие высоким стандартам качества. Каждый проект для нас уникален, и мы всегда стремимся к тому, чтобы он не только соответствовал ожиданиям наших клиентов, но и превосходил их.</p>
                         </div>
                     </div>
-                    <div class="about-img xxs:hidden sm:hidden md:hidden lg:hidden customlg:block float-right">
+                    <div class="about-img xxs:hidden sm:hidden md:hidden lg:hidden customlg:block float-right hiddenYEl">
                         <img src="images/about-img.png" alt="about-img">
                     </div>
                 </div>
@@ -262,7 +262,7 @@
                     <div class="contacts-descr md:w-[100%] lg:w-[100%] customlg:w-[50%]">
                         <h1 class="xs:text-[25.34px] sm:text-[28.34px] md:text-[35.34px] lg:text-[42.34px] font-bold text-j-blue dark:text-j-yellow hiddenYEl">Есть вопросы или хотите заказать сайт?</h1>
                         <h2 class="mt-[10px] xs:text-[17.34px] sm:text-[17.34px] md:text-[17.34px] lg:text-[24.34px] font-medium text-j-blue/75 dark:text-[#C6B55A] hiddenYEl">Мы всегда рады помочь! Напишите нам, и мы ответим на все ваши вопросы.</h2>
-                        <div class="contacts-img xxs:block sm:block md:block lg:block customlg:hidden">
+                        <div class="contacts-img xxs:block sm:block md:block lg:block customlg:hidden hiddenYEl">
                             <img src="images/contacts-img.png" alt="contacts-img">
                         </div>
                         <div class="contact-cards mt-[50px] flex flex-wrap justify-center customlg:justify-normal gap-[25px] hiddenYEl">
@@ -285,7 +285,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="contacts-img xxs:hidden sm:hidden md:hidden lg:hidden customlg:block ">
+                    <div class="contacts-img xxs:hidden sm:hidden md:hidden lg:hidden customlg:block hiddenYEl">
                         <img src="images/contacts-img.png" alt="contacts-img">
                     </div>
                 </div>
