added link to hero buttons

--- a/public/index.html
+++ b/public/index.html
@@ -67,8 +67,8 @@
             <div class="hero-content max-w-[970px] h-auto mx-auto">
                 <h1 class="xxs:text-[25.91px] sm:text-[35.91px] md:text-[45.91px] lg:text-[55.91px] font-bold text-center dark:text-white hiddenYEl "><span class="text-j-yellow">Каждый проект</span> — это уникальная история, и мы помогаем её рассказать</h1>
                 <div class="buttons flex justify-center gap-[35px] mt-[39px]">
-                    <button class="w-[205px] h-[55px] bg-j-yellow shadow-lg shadow-j-yellow/35 hover:-translate-y-1 hover:transition text-j-blue rounded-[39px] hiddenYEl ">Заказать</button>
-                    <button class="w-[205px] h-[55px] bg-j-blue shadow-lg shadow-j-blue/35 hover:-translate-y-1 hover:transition text-j-yellow rounded-[39px] hiddenYEl ">Портфолио</button>
+                    <a href="https://t.me/JoinWay_bot" target="_blank" class="text-center pt-[15px] w-[205px] h-[55px] bg-j-yellow shadow-lg shadow-j-yellow/35 hover:-translate-y-1 hover:transition text-j-blue rounded-[39px] hiddenYEl ">Заказать</a>
+                    <a href="#portfolio" class="text-center pt-[15px] w-[205px] h-[55px] bg-j-blue shadow-lg shadow-j-blue/35 hover:-translate-y-1 hover:transition text-j-yellow rounded-[39px] hiddenYEl ">Портфолио</a>
                 </div>
             </div>
         </section>
