--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body class="bg-white dark:bg-gray-900">
-    <!-- <div id="preloader">
+    <div id="preloader">
         <div class="loader"></div>
         <div class="loader"></div>
         <div class="loader"></div>
-    </div> -->
+    </div>
     <div class="container mx-auto">
         <!-- Nav -->
         <nav id="nav" class="mt-7">
